modif header chat

--- a/chat.html
+++ b/chat.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="/images/logo.png" sizes="100x100" type="image/png">
         <link rel="stylesheet" href="style.css">
-        <title>K_SPER</title>
+        <title>K_SPER - #roomID</title>
         <script>
             function showFiles() {
                 document.getElementsByClassName("files")[0].classList.add("show");
