--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <hr>
             </div>
 
-            <button type="submit">Connexion</button>
+            <button type="submit" title="Se Connecter">Connexion</button>
         </form>
     </body>
 </html>
